clusters/casa/apps/zitadel/k8s/login.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zitadel-login
  namespace: zitadel
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: zitadel-login
  template:
    metadata:
      labels:
        app: zitadel-login
    spec:
      enableServiceLinks: false
      containers:
        - name: zitadel-login
          image: "ghcr.io/zitadel/zitadel-login:v4.17.1@sha256:8035df2409afb35a3999482ee98e453261715f98d47e4b62e948e4a1ddf4345f"
          ports:
            - name: http
              containerPort: 3000
          startupProbe:
            exec:
              command: ["/bin/sh", "-c", "node /app/healthcheck.mjs http://localhost:3000/ui/v2/login/healthy"]
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            exec:
              command: ["/bin/sh", "-c", "node /app/healthcheck.mjs http://localhost:3000/ui/v2/login/healthy"]
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 3
          readinessProbe:
            exec:
              command: ["/bin/sh", "-c", "node /app/healthcheck.mjs http://localhost:3000/ui/v2/login/healthy"]
            periodSeconds: 15
            timeoutSeconds: 30
            failureThreshold: 3
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
              add: ["CHOWN", "DAC_OVERRIDE", "FOWNER", "SETGID", "SETUID"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 256Mi
          volumeMounts:
            - name: login-service-key
              mountPath: /login-service-key
              readOnly: true
      volumes:
        - name: login-service-key
          secret:
            secretName: zitadel-login-service-key
            items:
              - key: tls.key
                path: tls.key
