clusters/casa/apps/zitadel/k8s/login.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-login
  namespace: zitadel
spec:
  type: ClusterIP
  selector:
    app: zitadel-login
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
